--- a/index.html
+++ b/index.html
@@ -1,2 +1,14 @@
-# Auto detect text files and perform LF normalization
-* text=auto
+<!DOCTYPE html>
+<html>
+<head>
+	<meta charset="utf-8">
+	<title>TecBlog - O seu Blog de tecnologia</title>
+	
+</head>
+<body>
+
+	
+	Meu curriculo muito massa, você gostou?
+
+</body>
+</html>
