--- a/index.html
+++ b/index.html
@@ -2,13 +2,118 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<title>Portfolio</title>
-	
+	<title></title>
+	<link rel="stylesheet" type="text/css" href="estilo.css">
+
+	<script src="script.js">
+	</script>
 </head>
-<body>
-
-	
-	Meu curriculo muito massa, você gostou? sim
-
+<body >	
+		<center>
+			<div id="nome">
+				<img  src="imagens/nome.png">	
+			</div>
+		</center>
+		<center>
+			<div id="caixa">
+				<div id="caixa">
+				<div id="eu">
+					<div id="contato">
+						<div id="email">
+							lucasjcordeiro@outlook.com
+						</div>
+						<div id="whatsApp">
+							(85) 9 8680 7835
+						</div>	
+						<div id="gitHub">
+							<a href="https://github.com/jlucas1224">https://github.com/jlucas1224</a>
+						</div>		
+						</div>
+				</div>	
+				
+			<!--- INICIO --->
+				<div id="inicio">
+					<a onclick="sobreMim()">
+						<div>
+						<h2>SOBRE MIM</h2>
+						</div>
+					</a>
+					<a onclick="formacao()">
+						<div>
+						<h2>FORMAÇÃO</h2>
+						</div>
+					</a>
+					<a onclick="cursos()">
+						<div>
+						<h2>CURSOS</h2>
+						</div>
+					</a>
+					<a onclick="experiencia()">
+						<div>
+						<h2>EXPERIÊNCIA</h2>
+						</div>
+					</a>
+					<a onclick="habilidades()">
+						<div>
+						<h2>HABILIDADES</h2>
+						</div>
+					</a>
+				</div>
+			<!--- SOBRE MIM --->
+				<div id="sobreMim">
+					<a onclick="inicio()">
+						<div>
+							<h2>Voltar</h2>
+						</div>
+					</a>
+					<br>
+					João Lucas
+				</div>
+			<!--- FORMAÇÃO --->
+				<div id="formação">
+					<a onclick="inicio()">
+						<div>
+							<h2>Voltar</h2>
+						</div>
+					</a>
+					<br>
+					<p>
+						Engenharia da Computação (cursando)
+						IFCE - Instituto Federal de Educação, Ciência e Tecnologia do Ceará
+					</p>
+				</div>
+			<!--- CURSOS --->
+				<div id="cursos">
+					<a onclick="inicio()">
+						<div>
+							<h2>Voltar</h2>
+						</div>
+					</a>
+					<br>
+					Sou bom
+				</div>
+			<!--- EXPERIÊNCIA --->
+				<div id="experiência">
+					<a onclick="inicio()">
+						<div>
+							<h2>Voltar</h2>
+						</div>
+					</a>
+					<br>
+					Sei fazer joguinho
+				</div>
+			<!--- HABILIDADES --->
+				<div id="habilidades">
+					<a onclick="inicio()">
+						<div>
+							<h2>Voltar</h2>
+						</div>
+					</a>
+					<br>
+					Dar o c
+				</div>
+			</div>
+		</center>
+	</div>
 </body>
 </html>
