--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
 				<span id="apresentação3">João Lucas</span>
 			</h1>
 		</header>
+		<div>
+			<a href="about.html">Outra página</a>
+		</div>
 <!--- 
 		<center>
 			<div id="caixa">
