--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	
 		<header>
 			<h1 id="nome">
-				<span id="apresentação1">Olá!!</span><br>
+				<span id="apresentação1">Olá!</span><br>
 				<span id="apresentação2">Meu nome é</span><br>
 				<span id="apresentação3">João Lucas</span>
 			</h1>
