Imagens java e flutter

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	</script>
 </head>
 <body >	
-	
+
 		<header>
 			<h1 id="nome">
 				<span id="apresentação1">Olá!</span><br>
@@ -18,19 +18,38 @@
 			</h1>
 		</header>
 		
-		<hr>
+		<hr class="HrCima">
 		
 		<center>
-			<span class="titulos">
-			Habilidades
-			</span>
+			<span class="titulos">Habilidades</span>
 		</center>
 
+		<hr class="HrBaixo">
 		<div class="container">
-	  		<div class="container__image">
-	   			 <div class="container__info">Projetos</div>
-	    		<div class="container__info container__info2">HTML,CSS e Javascript</div>
+			<div class="web">
+	  		<div class="container__image">	 
+	   			 	<div class="container__info">Projetos</div>
+	    			<div class="container__info container__info2">HTML,CSS e Javascript</div>
+	   			 </div>
 	 	 	</div>
-		</div>  
+		</div> 
+		<hr> 
+		<div class="container">
+			<div class="java">
+	  		<div class="container__image">	 
+	   			 	<div class="container__info">Projetos</div>
+	    			<div class="container__info container__info2">Java</div>
+	   			 </div>
+	 	 	</div>
+		</div>
+		<hr> 
+		<div class="container">
+			<div class="flutter">
+	  		<div class="container__image">	 
+	   			 	<div class="container__info">Projetos</div>
+	    			<div class="container__info container__info2">Flutter</div>
+	   			 </div>
+	 	 	</div>
+		</div>
 </body>
 </html>
