--- a/about.html
+++ b/about.html
@@ -2,22 +2,17 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<title></title>
-	<link rel="stylesheet" type="text/css" href="estilo.css">
-
-	<script src="script.js">
-	</script>
+	<title>About</title>
+	<script defer src="node_modules/swup/dist/swup.min.js"></script> 
+	<script defer src="script.js"></script>
+	<link rel="stylesheet" href="estilo.css">
 </head>
-<body >	
-	
-		<header>
-			<h1 id="nome">
-				<span id="apresentação1">Olá!</span><br>
-				<span id="apresentação2">meu nome é</span><br>
-				<span id="apresentação3">João Lucas</span>
-			</h1>
-		</header>
+<body >
 
-	</div>
+
+		<a href="/index.html">Home</a>
+		<a href="/about.html" >Sobre</a>
+
+
 </body>
 </html>
