--- a/index.html
+++ b/index.html
@@ -2,54 +2,106 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<title></title>
-	<link rel="stylesheet" type="text/css" href="estilo.css">
-
-	<script src="script.js">
-	</script>
+	<title>João Lucas Cordeiro</title>
+	<link rel = "icon" href = 
+	"imagens/JLogo.png" 
+			type = "image/x-icon">
+	<script defer src="script.js"></script>	
+	<link rel="stylesheet" href="estilo.css">
 </head>
-<body >	
-
+<body >
 		<header>
-			<h1 id="nome">
-				<span id="apresentação1">Olá!</span><br>
-				<span id="apresentação2">Meu nome é</span><br>
-				<span id="apresentação3">João Lucas</span>
-			</h1>
+			<div id="cabecalho">
+				<div id="caixa-nome">
+					<h1 id="nome">
+						<span id="apresentação1">Olá!</span><br>
+						<span id="apresentação2">Meu nome é</span><br>
+						<span id="apresentação3">João Lucas</span>
+					</h1>
+				</div>
+				<div id="sobre-mim">
+					<p>
+						Sou estudante de Engenharia da Computação e atualmente venho tentando
+						desenvolver minhas habilidades como desenvolvedor Web. Pretendo adquirir
+						mais conhecimento a fim de me tornar um desenvolvedor full-stack.   
+					</p>
+				</div>
+			</div>
 		</header>
 		
-		<hr class="HrCima">
-		
+		<hr class="HrCima">		
 		<center>
-			<span class="titulos">Habilidades</span>
+			<span class="titulos">Conhecimentos</span>
 		</center>
-
 		<hr class="HrBaixo">
-		<div class="container">
-			<div class="web">
-	  		<div class="container__image">	 
-	   			 	<div class="container__info">Projetos</div>
-	    			<div class="container__info container__info2">HTML,CSS e Javascript</div>
-	   			 </div>
-	 	 	</div>
-		</div> 
-		<hr> 
-		<div class="container">
-			<div class="java">
-	  		<div class="container__image">	 
-	   			 	<div class="container__info">Projetos</div>
-	    			<div class="container__info container__info2">Java</div>
-	   			 </div>
-	 	 	</div>
-		</div>
-		<hr> 
-		<div class="container">
-			<div class="flutter">
-	  		<div class="container__image">	 
-	   			 	<div class="container__info">Projetos</div>
-	    			<div class="container__info container__info2">Flutter</div>
-	   			 </div>
-	 	 	</div>
-		</div>
+
+		<center>
+			<div class="image-container">
+				<div class="imagem" style="--clip-start: inset(100% 0 0 0); --clip-end: inset(0 0 0 0);">
+					<img src="imagens/flutter.png"/><img src="imagens/flutter.png"/>
+				</div>
+				<div class="imagem" style="--clip-start: inset(100% 0 0 0); --clip-end: inset(0 0 0 0);">
+					<img src="imagens/java.png"/><img src="imagens/java.png"/>
+				</div>
+				<div class="imagem" style="--clip-start: inset(100% 0 0 0); --clip-end: inset(0 0 0 0);">
+					<img src="imagens/linguagensProgramacao.png"/><img src="imagens/linguagensProgramacao.png"/>
+				</div>
+			</div>	
+		</center>
+		<hr class="HrCima">
+		<center>
+			<span class="titulos">Projetos</span>
+		</center>
+		<hr class="HrBaixo">
+		<center>
+			<div class="projetos">
+				<a href="https://www.youtube.com/watch?v=WeO960qFpFQ" style="color: #1F6FEB;">
+					<div id="projetoBlanch">
+						<div class="imagem">
+							<img src="imagens/blanch.png">
+						</div>
+						<div class="detalhes">
+							<h2>Blanch</h2>
+							<p>Um aplicativo Android que desenvolvi com alguns colegas de faculdade
+								com o intuito de unir e conectar, através da
+								mídia, pessoas que possuem o mesmo interesse culinário.
+								Conta com post de fotos, timeline, 
+								curtidas, save de fotos, comentários, etc.</p>
+								<br> 
+							<p style="color: grey;">#Não publicado</p>
+						</div>
+					</div>
+				</a>
+			</div>
+			<div class="projetos">
+				<a href="#jogo-info" style="color: #1F6FEB;">
+					<div id="projetoJogoJava" onclick="detalhesJogo()">
+						<div class="imagem">
+							<img src="imagens/joguinho.png">
+						</div>
+						<div class="detalhes">
+							<h2>Jogo Run and Gun</h2>
+							<p>Um projeto pessoal meu que programei usando java. 
+								É um jogo simples estilo Run'N Gun onde devemos desviar
+								de tiros e de inimigos, atirar em tudo e em todos 
+								e chegar ao fim da fase.
+							</p>
+							<br> 
+						<p style="color: grey;">#Não publicado</p>
+						</div>
+					</div>
+				</a>
+			</div>
+			<br>
+			<div id="jogo-info">
+				<span style="text-decoration: underline; cursor: pointer;" onclick="esconderDetalhesJogo()">
+					ESCONDER
+				</span>
+				<video width="600" height="400" controls="controls" autoplay="autoplay">
+					<source src="videos/gameplay.mp4" type="video/mp4" />
+					</video>
+			</div>
+		</center>		
+
 </body>
 </html>
